--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{48EE9590-3BF9-4A12-9C9A-88E8CF13DAEB}</ProjectGuid>
+    <ProjectGuid>{E4A55063-CBC8-4B7F-A1A6-C4F70F789DF0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Falcon.Web.Api.Test</RootNamespace>
-    <AssemblyName>Falcon.Web.Api.Test</AssemblyName>
+    <RootNamespace>Falcon.Web.Models</RootNamespace>
+    <AssemblyName>Falcon.Web.Models</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
