--- a/Source/Falcon/src/Falcon.Web.Api/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.config
@@ -4,52 +4,90 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler , log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <log4net>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="..\\..\\logs\\Falcon.Web.Api.log" />
+      <appendToFile value="true" />
+      <maxSizeRollBackups value="-1" />
+      <countDirection value="1" />
+      <maximumFileSize value="5MB" />
+      <rollingStyle value="Composite" />
+      <preserveLogFileNameExtension value="true" />
+      <staticLogFileName value="false" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %-5level [%thread] %logger - %message%newline%exception" />
+      </layout>
+    </appender>
+    <logger name="NHibernate">
+      <level value="ERROR" />
+    </logger>
+    <logger name="NHibernate.SQL">
+      <level value="ERROR" />
+    </logger>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+  </log4net>
   <appSettings></appSettings>
   <connectionStrings>
-    <add name="DBEntity" connectionString="metadata=res://*/WhatIfDataModel.csdl|res://*/WhatIfDataModel.ssdl|res://*/WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=31.25.89.211,2012;Initial Catalog=database_what_if;Persist Security Info=True;User ID=JebAsp;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-  providerName="System.Data.EntityClient" />
-    <!--<add name="DBEntity" connectionString="metadata=res://*/WhatIfDataModel.csdl|res://*/WhatIfDataModel.ssdl|res://*/WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf"
-      providerName="System.Data.SqlClient" />-->
+    <!--Online Connection-->
+    <!--<add name="DBEntity" connectionString="metadata=res://*/WhatIfDataModel.csdl|res://*/WhatIfDataModel.ssdl|res://*/WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=31.25.89.211,2012;Initial Catalog=database_what_if;Persist Security Info=True;User ID=JebAsp;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    providerName="System.Data.EntityClient" />-->
+    <!--Local Conncetion-->
+    <add name="DBEntity" connectionString="metadata=res://*/WhatIfDataModel.csdl|res://*/WhatIfDataModel.ssdl|res://*/WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf" providerName="System.Data.SqlClient" />
+    <!--Special One-->
+    <add name="what_ifEntities" connectionString="metadata=res://*/WhatIfDataModelShared.csdl|res://*/WhatIfDataModelShared.ssdl|res://*/WhatIfDataModelShared.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.6"/>
-    <httpRuntime targetFramework="4.6"/>
+    <compilation debug="true" targetFramework="4.6" />
+    <httpRuntime targetFramework="4.6" />
   </system.web>
   <system.webServer>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
-      <remove name="OPTIONSVerbHandler"/>
-      <remove name="TRACEVerbHandler"/>
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler"
-        preCondition="integratedMode,runtimeVersionv4.0"/>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
