--- a/Source/Falcon/src/Falcon.Web.Api/packages.config
+++ b/Source/Falcon/src/Falcon.Web.Api/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="5.2.0" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
