--- a/Source/Falcon/src/Falcon.Web.Site/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Site/Web.config
@@ -4,6 +4,43 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler , log4net"/>
+  </configSections>
+  <log4net>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="..\\..\\logs\\Falcon.Web.Site.log" />
+      <appendToFile value="true" />
+      <maxSizeRollBackups value="-1" />
+      <countDirection value="1" />
+      <maximumFileSize value="5MB" />
+      <rollingStyle value="Composite" />
+      <preserveLogFileNameExtension value="true" />
+      <staticLogFileName value="false" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %-5level [%thread] %logger - %message%newline%exception" />
+      </layout>
+    </appender>
+    <logger name="NHibernate">
+      <level value="ERROR" />
+    </logger>
+    <logger name="NHibernate.SQL">
+      <level value="ERROR" />
+    </logger>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+  </log4net>
+  <connectionStrings>
+    <add name="DBEntity" connectionString="metadata=res://*/WhatIfDataModel.csdl|res://*/WhatIfDataModel.ssdl|res://*/WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=31.25.89.211,2012;Initial Catalog=database_what_if;Persist Security Info=True;User ID=JebAsp;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    providerName="System.Data.EntityClient" />
+    <!--<add name="DBEntity" connectionString="metadata=res://*/WhatIfDataModel.csdl|res://*/WhatIfDataModel.ssdl|res://*/WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf"
+      providerName="System.Data.SqlClient" />-->
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
