--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\StoresController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
