--- a/Source/Falcon/src/Falcon.Web.Common/Falcon.Web.Common.csproj
+++ b/Source/Falcon/src/Falcon.Web.Common/Falcon.Web.Common.csproj
@@ -62,6 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionTransactionHelper.cs" />
+    <Compile Include="ErrorHandling\GlobalExceptionHandler.cs" />
+    <Compile Include="ErrorHandling\SimpleErrorResult.cs" />
+    <Compile Include="ErrorHandling\SimpleExceptionLogger.cs" />
     <Compile Include="IActionTransactionHelper.cs" />
     <Compile Include="NamespaceHttpControllerSelector.cs" />
     <Compile Include="NinjectDependencyResolver.cs" />
