--- a/Source/Falcon/src/Falcon.Web.Common/Falcon.Web.Common.csproj
+++ b/Source/Falcon/src/Falcon.Web.Common/Falcon.Web.Common.csproj
@@ -87,6 +87,10 @@
       <Project>{551add74-592a-4b33-b629-2f35886d6e1d}</Project>
       <Name>Falcon.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Falcon.EFCommonContext\Falcon.EFCommonContext.csproj">
+      <Project>{3c3db492-5ec4-459a-9dc3-0c083277b6f4}</Project>
+      <Name>Falcon.EFCommonContext</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
