--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\Answer.cs" />
+    <Compile Include="Api\AppTheme.cs" />
+    <Compile Include="Api\Comment.cs" />
+    <Compile Include="Api\UserState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Api\Question.cs" />
     <Compile Include="Api\User.cs" />
