--- a/Source/Falcon/src/Falcon.Web.Api/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.config
@@ -38,7 +38,7 @@
   <appSettings></appSettings>
   <connectionStrings>
     <!--Online Connection-->
-    <!--<add name="DBEntity" connectionString="metadata=res://*/WhatIfDBModel.csdl|res://*/WhatIfDBModel.ssdl|res://*/WhatIfDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=31.25.89.211,2012;Initial Catalog=database_what_if;Persist Security Info=True;User ID=JebAsp;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <!--add name="DBEntity" connectionString="metadata=res://*/WhatIfDBModel.csdl|res://*/WhatIfDBModel.ssdl|res://*/WhatIfDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=31.25.89.211,2012;Initial Catalog=database_what_if;Persist Security Info=True;User ID=JebAsp;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;"
     providerName="System.Data.EntityClient" />-->
     <!--Local Conncetion-->
     <add name="DBEntity" connectionString="metadata=res://*/WhatIfDBModel.csdl|res://*/WhatIfDBModel.ssdl|res://*/WhatIfDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
