--- a/Source/Falcon/src/Falcon.Web.Site/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Site/Web.config
@@ -37,10 +37,10 @@
   </log4net>
   <connectionStrings>
     <!--Online Connection-->
-    <add name="DBEntity" connectionString="metadata=res://*/WhatIfDBModel.csdl|res://*/WhatIfDBModel.ssdl|res://*/WhatIfDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=31.25.89.211,2012;Initial Catalog=database_what_if;Persist Security Info=True;User ID=JebAsp;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=31.25.89.211,2012;Initial Catalog=database_what_if;Persist Security Info=True;User ID=JebAsp;Password=@@@Visualbasic7;MultipleActiveResultSets=True;App=EntityFramework&quot;"
     providerName="System.Data.EntityClient" />
     <!--Local Conncetion-->
-    <!--<add name="DBEntity" connectionString="metadata=res://*/WhatIfDBModel.csdl|res://*/WhatIfDBModel.ssdl|res://*/WhatIfDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IBHM4S7;initial catalog=what_if;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
