--- a/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
+++ b/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlServer\QueryProcessors\AchievementQueryProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Falcon.Common\Falcon.Common.csproj">
@@ -66,6 +67,10 @@
       <Project>{3c3db492-5ec4-459a-9dc3-0c083277b6f4}</Project>
       <Name>Falcon.EFCommonContext</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Falcon.Web.Models\Falcon.Web.Models.csproj">
+      <Project>{E4A55063-CBC8-4B7F-A1A6-C4F70F789DF0}</Project>
+      <Name>Falcon.Web.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
@@ -74,6 +79,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
