--- a/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
+++ b/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Security\IWebUserSession.cs" />
     <Compile Include="TypeMapping\AutoMapperAdapter.cs" />
     <Compile Include="TypeMapping\IAutoMapper.cs" />
-    <Compile Include="TypeMapping\IAutoMapperConfigurator.cs" />
+    <Compile Include="TypeMapping\IAutoMapperTypeConfigurator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
